# StockMarketGamblingModel

./: .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: task_paper.py  theory_model_stock_gambling.tex  theory_model_stock_gambling_pres.tex
src/theory_model_stock_gambling/: __init__.py  config.py  model_functions.py  paper_functions.py  sandbox.ipynb  sandbox_v002.ipynb  task_model.py  task_paper.py
src/theory_model_stock_gambling/analysis/: task_analysis.py
src/theory_model_stock_gambling/data_management/: __init__.py  task_data_management.py
src/theory_model_stock_gambling/final/: __init__.py  task_final.py
tests/: test_functions.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
