[metadata]
name = theory_model_stock_gambling
description = Theory Model Stock Gambling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicolasRoever/theory_model_stock_gambling
author = Nicolas Roever
author_email = nicoroever@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/NicolasRoever/theory_model_stock_gambling
    Documentation = https://github.com/NicolasRoever/theory_model_stock_gambling
    Github = https://github.com/NicolasRoever/theory_model_stock_gambling
    Tracker = https://github.com/NicolasRoever/theory_model_stock_gambling/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/theory_model_stock_gambling/_version.py
